feat: Implement event certificates
